<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0f26f"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="206dp"
            app:srcCompat="@drawable/mapa" />

        <EditText
            android:id="@+id/txt_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/txt_codigo"
            android:inputType="number"
            android:textColor="@color/colorOrnage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/txt_descripcion"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

        <EditText
            android:id="@+id/txt_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/txt_precio"
            android:inputType="numberDecimal"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="#0E86E6"
                android:onClick="Registrar"
                android:text="@string/BotonRegistrar"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_precio" />

            <Button
                android:id="@+id/button2"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#9C27B0"
                android:onClick="Buscar"
                android:text="@string/BotonBuscar"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <Button
                android:id="@+id/button3"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FF9800"
                android:onClick="Modificar"
                android:text="@string/BotonModificar"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#F44336"
                android:onClick="Eliminar"
                android:text="@string/BotonEliminar"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/button5"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#4CAF50"
                android:onClick="Siguiente"
                android:text="@string/BotonIrMapa"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/button4"
                tools:layout_editor_absoluteX="16dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>